instructions ViewController made

--- a/Ghost/Base.lproj/Main.storyboard
+++ b/Ghost/Base.lproj/Main.storyboard
@@ -7,6 +7,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -343,6 +344,14 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aLF-qx-Nfw">
+                                <rect key="frame" x="135" y="620" width="105" height="36"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="Instructions"/>
+                                <connections>
+                                    <segue destination="vPf-ra-c0y" kind="presentation" id="RWr-dW-x6N"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -392,6 +401,7 @@
                             <constraint firstItem="sLi-yQ-lMc" firstAttribute="width" secondItem="Ogi-xX-aF4" secondAttribute="width" id="NNh-fi-K48"/>
                             <constraint firstItem="SN6-Y1-kZb" firstAttribute="leading" secondItem="l8r-hq-Gtx" secondAttribute="trailing" id="Np0-kP-ohE"/>
                             <constraint firstItem="OLD-VO-iFJ" firstAttribute="top" secondItem="Ogi-xX-aF4" secondAttribute="bottom" id="OSO-sE-4Fx"/>
+                            <constraint firstItem="aLF-qx-Nfw" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="PJp-BM-ZKY"/>
                             <constraint firstItem="KZf-TC-BGC" firstAttribute="leading" secondItem="jtX-oy-UcF" secondAttribute="leading" id="PaU-fg-gRC"/>
                             <constraint firstItem="KZf-TC-BGC" firstAttribute="top" secondItem="jtX-oy-UcF" secondAttribute="bottom" constant="8" id="QjJ-id-Y08"/>
                             <constraint firstItem="THX-5d-2bh" firstAttribute="leading" secondItem="5gt-Nk-UEz" secondAttribute="trailing" constant="5" id="R0C-mC-wtG"/>
@@ -411,6 +421,7 @@
                             <constraint firstItem="60H-xB-Fhp" firstAttribute="width" secondItem="Ogi-xX-aF4" secondAttribute="width" id="axJ-bx-dtK"/>
                             <constraint firstItem="Dhj-g0-PpU" firstAttribute="centerX" secondItem="lgO-WN-vac" secondAttribute="centerX" id="bOg-sC-Huc"/>
                             <constraint firstItem="THX-5d-2bh" firstAttribute="centerY" secondItem="5gt-Nk-UEz" secondAttribute="centerY" id="boy-JF-Tz6"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="aLF-qx-Nfw" secondAttribute="bottom" constant="11" id="cW2-ab-uhS"/>
                             <constraint firstItem="Q7U-K5-rxO" firstAttribute="leading" secondItem="TE2-rH-x8v" secondAttribute="trailing" constant="5" id="d8R-ih-66a"/>
                             <constraint firstItem="jtX-oy-UcF" firstAttribute="leading" secondItem="Ogi-xX-aF4" secondAttribute="leading" id="dNz-MC-Qwc"/>
                             <constraint firstItem="uoc-hk-yNL" firstAttribute="width" secondItem="Ogi-xX-aF4" secondAttribute="width" id="ddp-Q6-gb5"/>
@@ -506,6 +517,97 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="32.799999999999997" y="38.23088455772114"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="OXN-IY-UEc">
+            <objects>
+                <viewController id="vPf-ra-c0y" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="glO-Kd-hVr"/>
+                        <viewControllerLayoutGuide type="bottom" id="n0E-pd-SEe"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="LIw-8h-7eG">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Instructions" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SIM-Kk-Btd">
+                                <rect key="frame" x="72" y="130" width="233" height="49"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="41"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Start with a letter." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VqR-ya-8zp">
+                                <rect key="frame" x="19" y="208" width="136" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="The computer will add another letter." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ljR-Zm-UfR">
+                                <rect key="frame" x="19" y="239" width="282" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Continue alternating adding letters until a word is formed." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7d1-Fs-F3O">
+                                <rect key="frame" x="19" y="270" width="337.5" height="41"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Note: Dumb mode doesn't care if it wins, smart mode does." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CZI-FD-cyL">
+                                <rect key="frame" x="17" y="496" width="338" height="41"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.78775380710659904" green="0.014748099825768248" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Whoever adds the last letter wins the round." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K4X-jZ-egL">
+                                <rect key="frame" x="19" y="321" width="338" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Whoever loses the round gets a letter of the word GHOST." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pwP-VX-SAo">
+                                <rect key="frame" x="19" y="352" width="338" height="41"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="When someone reaches a full GHOST, they lose the game." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5OZ-f2-BvD">
+                                <rect key="frame" x="19" y="403" width="338" height="41"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="SIM-Kk-Btd" firstAttribute="centerX" secondItem="LIw-8h-7eG" secondAttribute="centerX" constant="1" id="4q6-2b-KFI"/>
+                            <constraint firstItem="CZI-FD-cyL" firstAttribute="width" secondItem="5OZ-f2-BvD" secondAttribute="width" id="I8B-Mo-iPE"/>
+                            <constraint firstItem="5OZ-f2-BvD" firstAttribute="width" secondItem="pwP-VX-SAo" secondAttribute="width" id="JnZ-Q1-Q9d"/>
+                            <constraint firstItem="K4X-jZ-egL" firstAttribute="top" secondItem="7d1-Fs-F3O" secondAttribute="bottom" constant="10" id="Kvn-Sf-Zia"/>
+                            <constraint firstItem="pwP-VX-SAo" firstAttribute="top" secondItem="K4X-jZ-egL" secondAttribute="bottom" constant="10" id="QMZ-Ef-h8K"/>
+                            <constraint firstItem="pwP-VX-SAo" firstAttribute="leading" secondItem="K4X-jZ-egL" secondAttribute="leading" id="TCl-UL-R8i"/>
+                            <constraint firstItem="K4X-jZ-egL" firstAttribute="width" secondItem="7d1-Fs-F3O" secondAttribute="width" id="TWi-77-LhI"/>
+                            <constraint firstItem="ljR-Zm-UfR" firstAttribute="leading" secondItem="VqR-ya-8zp" secondAttribute="leading" id="UeP-E4-2j6"/>
+                            <constraint firstItem="K4X-jZ-egL" firstAttribute="leading" secondItem="7d1-Fs-F3O" secondAttribute="leading" id="b6z-ud-dgw"/>
+                            <constraint firstItem="VqR-ya-8zp" firstAttribute="top" secondItem="SIM-Kk-Btd" secondAttribute="bottom" constant="29" id="bHQ-79-zla"/>
+                            <constraint firstItem="7d1-Fs-F3O" firstAttribute="width" secondItem="LIw-8h-7eG" secondAttribute="width" multiplier="0.9" id="dy9-0M-dhG"/>
+                            <constraint firstItem="pwP-VX-SAo" firstAttribute="width" secondItem="K4X-jZ-egL" secondAttribute="width" id="hwZ-5a-m3W"/>
+                            <constraint firstItem="5OZ-f2-BvD" firstAttribute="leading" secondItem="pwP-VX-SAo" secondAttribute="leading" id="lHw-xF-Bec"/>
+                            <constraint firstItem="5OZ-f2-BvD" firstAttribute="top" secondItem="pwP-VX-SAo" secondAttribute="bottom" constant="10" id="mTb-eS-TdB"/>
+                            <constraint firstItem="ljR-Zm-UfR" firstAttribute="top" secondItem="VqR-ya-8zp" secondAttribute="bottom" constant="10" id="mf0-nP-HyC"/>
+                            <constraint firstItem="SIM-Kk-Btd" firstAttribute="top" secondItem="glO-Kd-hVr" secondAttribute="bottom" constant="110" id="nFL-Yv-hC8"/>
+                            <constraint firstItem="CZI-FD-cyL" firstAttribute="top" secondItem="5OZ-f2-BvD" secondAttribute="bottom" constant="52" id="qez-8f-rtQ"/>
+                            <constraint firstItem="7d1-Fs-F3O" firstAttribute="top" secondItem="ljR-Zm-UfR" secondAttribute="bottom" constant="10" id="rOr-yt-ERz"/>
+                            <constraint firstItem="7d1-Fs-F3O" firstAttribute="leading" secondItem="ljR-Zm-UfR" secondAttribute="leading" id="tSG-iF-SM9"/>
+                            <constraint firstItem="CZI-FD-cyL" firstAttribute="leading" secondItem="5OZ-f2-BvD" secondAttribute="leading" constant="-2" id="wK4-C0-61Y"/>
+                            <constraint firstItem="VqR-ya-8zp" firstAttribute="leading" secondItem="LIw-8h-7eG" secondAttribute="leadingMargin" constant="3" id="x13-L3-dfy"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="96W-PC-GK8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="762.39999999999998" y="38.23088455772114"/>
         </scene>
     </scenes>
 </document>
